provide livestream replay publish via url

--- a/static/app-strings.json
+++ b/static/app-strings.json
@@ -1733,5 +1733,10 @@
   "Learn more and sign petition": "Learn more and sign petition",
   "Publishing...": "Publishing...",
   "Collection": "Collection",
+  "Upload that unlabeled video you found behind the TV in 1991": "Upload that unlabeled video you found behind the TV in 1991",
+  "Select Replay": "Select Replay",
+  "Craft an epic post clearly explaining... whatever.": "Craft an epic post clearly explaining... whatever.",
+  "waiting": "waiting",
+  "%viewer_count% currently %viewer_state%": "%viewer_count% currently %viewer_state%",
   "--end--": "--end--"
 }
