CoinSwap: websocket + multi-coin
- For the active swap, switch from polling to websocket. The returned data is now the Charge data from the commerce, so some parsing will be required.

- Allow the user to send other coins that the commerce supports.

- Only save the 'chargeCode' to the wallet. The other data can be repopulated from this.

--- a/static/app-strings.json
+++ b/static/app-strings.json
@@ -1728,26 +1728,28 @@
   "lbry.tv is being retired in favor of %odysee%": "lbry.tv is being retired in favor of %odysee%",
   "You will have to switch to the %desktop_app% or %odysee% in the near future. Your existing login details will work on %odysee% and all of your %credits% and other settings will be there.": "You will have to switch to the %desktop_app% or %odysee% in the near future. Your existing login details will work on %odysee% and all of your %credits% and other settings will be there.",
   "Swap": "Swap",
-  "Swap Bitcoin": "Swap Bitcoin",
+  "Swap Crypto": "Swap Crypto",
   "Bitcoin": "Bitcoin",
   "Credits": "Credits",
   "Start Swap": "Start Swap",
   "To": "To",
   "Receiving": "Receiving",
-  "Send bitcoin to the address provided and you will be sent an equivalent amount of Credits.": "Send bitcoin to the address provided and you will be sent an equivalent amount of Credits.",
-  "Swap Bitcoin for %lbc%": "Swap Bitcoin for %lbc%",
+  "Send to the address provided and you will be sent an equivalent amount of Credits.": "Send to the address provided and you will be sent an equivalent amount of Credits.",
+  "Swap Crypto for %lbc%": "Swap Crypto for %lbc%",
   "Processing...": "Processing...",
   "View Past Swaps": "View Past Swaps",
   "Remove address": "Remove address",
-  "Waiting %sendAmount% BTC": "Waiting %sendAmount% BTC",
-  "Waiting to receive your bitcoin.": "Waiting to receive your bitcoin.",
-  "Confirming %sendAmount% BTC": "Confirming %sendAmount% BTC",
-  "Confirming BTC transaction.": "Confirming BTC transaction.",
-  "Sending LBC": "Sending LBC",
+  "Waiting": "Waiting",
+  "Waiting to receive your crypto.": "Waiting to receive your crypto.",
+  "Confirming transaction.": "Confirming transaction.",
+  "Sending Credits": "Sending Credits",
   "Bitcoin received. Sending your LBC.": "Bitcoin received. Sending your LBC.",
   "Completed": "Completed",
   "LBC sent. You should see it in your wallet.": "LBC sent. You should see it in your wallet.",
   "Failed": "Failed",
+  "Expired": "Expired",
+  "Code copied.": "Code copied.",
+  "Alternative coins": "Alternative coins",
   "An error occurred on the previous swap.": "An error occurred on the previous swap.",
   "Failed to initiate swap.": "Failed to initiate swap.",
   "Failed to query swap status.": "Failed to query swap status.",
@@ -1759,7 +1761,7 @@
   "Confirm Address Removal": "Confirm Address Removal",
   "Remove BTC Swap Address": "Remove BTC Swap Address",
   "This process cannot be reversed.": "This process cannot be reversed.",
-  "Remove %btc_address%?": "Remove %btc_address%?",
+  "Remove %address%?": "Remove %address%?",
   "View transaction": "View transaction",
   "We apologize for this inconvenience, but have added this additional step to prevent abuse. Users on VPN or shared connections will continue to see this message and are not eligible for Rewards.": "We apologize for this inconvenience, but have added this additional step to prevent abuse. Users on VPN or shared connections will continue to see this message and are not eligible for Rewards.",
   "Help LBRY Save Crypto": "Help LBRY Save Crypto",
