--- a/static/app-strings.json
+++ b/static/app-strings.json
@@ -1734,11 +1734,11 @@
   "Start Swap": "Start Swap",
   "To": "To",
   "Receiving": "Receiving",
-  "Send to the address provided and you will be sent an equivalent amount of Credits.": "Send to the address provided and you will be sent an equivalent amount of Credits.",
+  "Send crypto to the address provided and you will be sent an equivalent amount of Credits.": "Send crypto to the address provided and you will be sent an equivalent amount of Credits.",
   "Swap Crypto for %lbc%": "Swap Crypto for %lbc%",
   "Processing...": "Processing...",
   "View Past Swaps": "View Past Swaps",
-  "Remove address": "Remove address",
+  "Remove swap": "Remove swap",
   "Waiting": "Waiting",
   "Waiting to receive your crypto.": "Waiting to receive your crypto.",
   "Confirming transaction.": "Confirming transaction.",
@@ -1746,23 +1746,26 @@
   "Bitcoin received. Sending your LBC.": "Bitcoin received. Sending your LBC.",
   "Completed": "Completed",
   "LBC sent. You should see it in your wallet.": "LBC sent. You should see it in your wallet.",
-  "Failed": "Failed",
   "Expired": "Expired",
-  "Code copied.": "Code copied.",
-  "Alternative coins": "Alternative coins",
+  "Swap expired.": "Swap expired.",
+  "Failed": "Failed",
   "An error occurred on the previous swap.": "An error occurred on the previous swap.",
+  "Alternative coins": "Alternative coins",
   "Failed to initiate swap.": "Failed to initiate swap.",
   "Failed to query swap status.": "Failed to query swap status.",
   "The system is currently down. Come back later.": "The system is currently down. Come back later.",
   "Unable to obtain exchange rate. Try again later.": "Unable to obtain exchange rate. Try again later.",
   "The BTC amount needs to be higher": "The BTC amount needs to be higher",
   "The BTC amount is too high": "The BTC amount is too high",
-  "Address": "Address",
-  "Confirm Address Removal": "Confirm Address Removal",
-  "Remove BTC Swap Address": "Remove BTC Swap Address",
-  "This process cannot be reversed.": "This process cannot be reversed.",
+  "Confirm Swap Removal": "Confirm Swap Removal",
+  "Remove Swap": "Remove Swap",
   "Remove %address%?": "Remove %address%?",
+  "This process cannot be reversed.": "This process cannot be reversed.",
   "View transaction": "View transaction",
+  "Amount copied.": "Amount copied.",
+  "Transaction ID copied.": "Transaction ID copied.",
+  "This page can be closed while the transactions are in progress.\nYou can view the status later from:\n • Wallet » Swap » View Past Swaps": "This page can be closed while the transactions are in progress.\nYou can view the status later from:\n • Wallet » Swap » View Past Swaps",
+  "Credits sent": "Credits sent",
   "We apologize for this inconvenience, but have added this additional step to prevent abuse. Users on VPN or shared connections will continue to see this message and are not eligible for Rewards.": "We apologize for this inconvenience, but have added this additional step to prevent abuse. Users on VPN or shared connections will continue to see this message and are not eligible for Rewards.",
   "Help LBRY Save Crypto": "Help LBRY Save Crypto",
   "The US government is attempting to destroy the cryptocurrency industry. Can you help?": "The US government is attempting to destroy the cryptocurrency industry. Can you help?",
