move file size limit to conig

--- a/.env.defaults
+++ b/.env.defaults
@@ -32,6 +32,7 @@ ENABLE_FILE_REACTIONS=false
 ENABLE_CREATOR_REACTIONS=false
 ENABLE_NO_SOURCE_CLAIMS=false
 CHANNEL_STAKED_LEVEL_VIDEO_COMMENTS=4
+WEB_PUBLISH_SIZE_LIMIT_GB=4
 
 # OG
 OG_TITLE_SUFFIX=| lbry.tv
