fix posts not showing up on desktop

--- a/static/app-strings.json
+++ b/static/app-strings.json
@@ -1738,5 +1738,6 @@
   "Craft an epic post clearly explaining... whatever.": "Craft an epic post clearly explaining... whatever.",
   "waiting": "waiting",
   "%viewer_count% currently %viewer_state%": "%viewer_count% currently %viewer_state%",
+  "Choose Replay": "Choose Replay",
   "--end--": "--end--"
 }
